FIX url favicon

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo/logo_green.svg"/>
+    <link rel="icon" href="%PUBLIC_URL%/logo/logo_green.svg" --> />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Health Algorithm is a project made by Neftalí  de la Cruz, Javi Azagra, Adolfo Tardón and Carlota Juncosa with React JS." />
