--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Health Algorithm is a project made by Neftalí  de la Cruz, Javi Azagra, Adolfo Tardón and Carlota Juncosa with React JS." />
+    <meta name="description" content="Health Algorithm is a project made by Neftalí  de la Cruz, Javi Azagra, Adolfo Gómez and Carlota Juncosa with React JS." />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
